# rust_todo

./: .gitignore  Cargo.toml  README.md  copilot-setup-steps.yml  main.py  pyproject.toml
.claude/agents/: coder-backend.md
.claude/knowledge/: backend_overview.md
.claude/other/: claude_tool.md  how_to_use_claude_cli.md
.claude/prompts/: research.txt
.copilot/explanation/: axum-routing.md  rust-error-types.md
.copilot/knowledge/: frontend-knowledge-base.md  playwright-best-practices.md
.copilot/others/: how_to_use_copilot_cli.md  how_to_write_agent.md  sample.agent.agent.md
.copilot/tasks/: meta.createAgent.md
.copilot/temp_output/: todo-app-feature-proposals.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: ✨-set-up-copilot-instructions-and-copilot-setup-and-readme.md
.github/agents/: coder.backend.agent.md  help.explanation.agent.md  runner.procman.agent.md
.github/instructions/: backend.instructions.md  database.instructions.md  frontend.instructions.md
.github/prompts/: coder.frontend.default.prompt.md  coder.script.default.prompt.md  general.basic.default.prompt.md  meta.createAgent.default.prompt.md
.user/knowledge/: playwright-guide.md
backend/: Cargo.toml
backend/src/: database.rs  handlers.rs  main.rs
frontend/: jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
frontend/e2e/: package.json  (+3 more)
mcp/: test.py
scripts/: choice_selector.py  generate_claude_commands.py  http_request.py  procman.py
src/: database.rs  handlers.rs  main.rs
static/: bundle.js  index.html
(+34 files in other folders)
